test/scc/expr/semantic-errors/127.a
127.t:4:16: error: initialization discards 'const' qualifier